@@ -175,9 +175,6 @@ static const struct ld_option ld_options[] =
     '\0', NULL, N_("Ignored for GCC LTO option compatibility"),
     ONE_DASH },
 #endif /* ENABLE_PLUGINS */
-  { {"fuse-ld=", required_argument, NULL, OPTION_IGNORE},
-    '\0', NULL, N_("Ignored for GCC linker option compatibility"),
-    ONE_DASH },
   { {"Qy", no_argument, NULL, OPTION_IGNORE},
     '\0', NULL, N_("Ignored for SVR4 compatibility"), ONE_DASH },
   { {"emit-relocs", no_argument, NULL, 'q'},
@@ -446,8 +443,6 @@ static const struct ld_option ld_options[] =
     '\0', N_("ADDRESS"), N_("Set address of text segment"), ONE_DASH },
   { {"Trodata-segment", required_argument, NULL, OPTION_TRODATA_SEGMENT},
     '\0', N_("ADDRESS"), N_("Set address of rodata segment"), ONE_DASH },
-  { {"Tldata-segment", required_argument, NULL, OPTION_TLDATA_SEGMENT},
-    '\0', N_("ADDRESS"), N_("Set address of ldata segment"), ONE_DASH },
   { {"unresolved-symbols=<method>", required_argument, NULL,
      OPTION_UNRESOLVED_SYMBOLS},
     '\0', NULL, N_("How to handle unresolved symbols.  <method> is:\n"
@@ -503,10 +498,6 @@ static const struct ld_option ld_options[] =
     TWO_DASHES },
   { {"wrap", required_argument, NULL, OPTION_WRAP},
     '\0', N_("SYMBOL"), N_("Use wrapper functions for SYMBOL"), TWO_DASHES },
-  { {"ignore-unresolved-symbol", required_argument, NULL,
-    OPTION_IGNORE_UNRESOLVED_SYMBOL},
-    '\0', N_("SYMBOL"),
-    N_("Unresolved SYMBOL will not cause an error or warning"), TWO_DASHES },
 };
 
 #define OPTION_COUNT ARRAY_SIZE (ld_options)
@@ -961,7 +952,9 @@ parse_args (unsigned argc, char **argv)
 	  break;
 #ifdef ENABLE_PLUGINS
 	case OPTION_PLUGIN:
-	  plugin_opt_plugin (optarg);
+	  if (plugin_opt_plugin (optarg))
+	    einfo (_("%P%F: %s: error loading plugin\n"),
+		   plugin_error_plugin ());
 	  break;
 	case OPTION_PLUGIN_OPT:
 	  if (plugin_opt_plugin_arg (optarg))
@@ -1201,9 +1194,6 @@ parse_args (unsigned argc, char **argv)
 	case OPTION_TRODATA_SEGMENT:
 	  set_segment_start (".rodata-segment", optarg);
 	  break;
-	case OPTION_TLDATA_SEGMENT:
-	  set_segment_start (".ldata-segment", optarg);
-	  break;
 	case OPTION_TRADITIONAL_FORMAT:
 	  link_info.traditional_format = TRUE;
 	  break;
@@ -1355,9 +1345,6 @@ parse_args (unsigned argc, char **argv)
 	  break;
 	case OPTION_WRAP:
 	  add_wrap (optarg);
-	  break;
-	case OPTION_IGNORE_UNRESOLVED_SYMBOL:
-	  add_ignoresym (&link_info, optarg);
 	  break;
 	case OPTION_DISCARD_NONE:
 	  link_info.discard = discard_none;
