@@ -1,3 +1,11 @@
+2012-12-18  Roland McGrath  <mcgrathr@google.com>
+
+	* ld.texinfo (Options): Describe -Trodata-segment.
+	* ldlex.h (enum option_values): Add OPTION_TRODATA_SEGMENT.
+	* lexsup.c (ld_options, parse_args): Handle -Trodata-segment.
+	* scripttempl/elf.sc (RODATA_ADDR, SHLIB_RODATA_ADDR): Wrap
+	SEGMENT_START("rodata-segment", ...) + SIZEOF_HEADERS around the value.
+
 2012-12-11  Roland McGrath  <mcgrathr@google.com>
 
 	* emulparams/elf_nacl.sh (nacl_rodata_addr): New shell function.
